

public abstract class PizzaFactory {
	public Pizza create(String name) {
		
		return null;
	}
}
