public class PizzaGrecqueStyleStrasbourg extends Pizza {

}
