public class PizzeriaBrest extends Pizzeria{
	public PizzeriaBrest(PizzaFactory pizzaFactory) {
        super(pizzaFactory);
    }

   
}
