public class PizzeriaStrasbourg extends Pizzeria{
	
		public PizzeriaStrasbourg(PizzaFactory pizzaFactory) {
	        super(pizzaFactory);
	    }
		
	

}
