package pizza;
import java.util.ArrayList;

public abstract class Pizza {
	
	
	protected String name;
	protected String crust;
	protected String sauce;
	protected ArrayList<String> garnitures;
	

	public void prepare() {
		// TODO Auto-generated method stub
	}

	public void bake() {
		// TODO Auto-generated method stub
		
	}

	public void cut() {
		// TODO Auto-generated method stub
		
	}

	public void wrap() {
		// TODO Auto-generated method stub
		
	}
	public String getName() {
		return name;
		
	}
}
