@startuml
class PizzaFactoryStrasbourg [[java:PizzaFactoryStrasbourg]] {
	-{static}PizzaFactoryStrasbourg uniqueInstance
	-PizzaFactoryStrasbourg()
	+{static}PizzaFactoryStrasbourg getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryStrasbourg
class PizzeriaFactory [[java:PizzeriaFactory]] {
	-{static}PizzeriaFactory uniqueInstance
	~PizzeriaFactory()
	+{static}PizzeriaFactory getInstance()
	+Pizzeria create(String name)
}
class PizzaPoivronStyleBrest [[java:PizzaPoivronStyleBrest]] {
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronStyleBrest
class PizzaPoivronStyleStrasbourg [[java:PizzaPoivronStyleStrasbourg]] {
	+PizzaPoivronStyleStrasbourg()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaPoivronStyleStrasbourg
class PizzeriaStrasbourg [[java:PizzeriaStrasbourg]] {
	+PizzeriaStrasbourg(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaStrasbourg
abstract class PizzaFactory [[java:PizzaFactory]] {
	+Pizza create(String name)
}
class PizzaGrecqueStyleStrasbourg [[java:PizzaGrecqueStyleStrasbourg]] {
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleStrasbourg
class PizzaTestDrive [[java:PizzaTestDrive]] {
	+{static}void main(String[] args)
}
class PizzaFactoryBrest [[java:PizzaFactoryBrest]] {
	-{static}PizzaFactoryBrest uniqueInstance
	-PizzaFactoryBrest()
	+{static}PizzaFactoryBrest getInstance()
	+Pizza create(String name)
}
class PizzaFactory [[java:PizzaFactory]] {
}
PizzaFactory <|-- PizzaFactoryBrest
abstract class Pizza [[java:Pizza]] {
	#String name
	#String crust
	#String sauce
	#ArrayList<String> garnitures
	+void prepare()
	+void bake()
	+void cut()
	+void wrap()
	+String getName()
}
class PizzaCheeseStyleStrasbourg [[java:PizzaCheeseStyleStrasbourg]] {
	+PizzaCheeseStyleStrasbourg()
	+void cut()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaCheeseStyleStrasbourg
abstract class Pizzeria [[java:Pizzeria]] {
	#Pizza createPizza(String name)
	+Pizzeria(PizzaFactory pizzaFactory)
	+Pizza orderPizza(String type)
}
class PizzaCheeseStyleBrest [[java:PizzaCheeseStyleBrest]] {
	+PizzaCheeseStyleBrest()
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaCheeseStyleBrest
class PizzaGrecqueStyleBrest [[java:PizzaGrecqueStyleBrest]] {
}
class Pizza [[java:Pizza]] {
}
Pizza <|-- PizzaGrecqueStyleBrest
class PizzeriaBrest [[java:PizzeriaBrest]] {
	+PizzeriaBrest(PizzaFactory pizzaFactory)
}
class Pizzeria [[java:Pizzeria]] {
}
Pizzeria <|-- PizzeriaBrest

PizzeriaStrasbourg -[hidden]> Pizzeria
PizzeriaBrest -[hidden]> Pizzeria

PizzeriaBrest -[hidden]-> PizzeriaStrasbourg

"PizzaTestDrive" ..> "PizzeriaFactory"
"PizzaTestDrive" ..> "Pizza"
"PizzeriaFactory" ..> "Pizzeria"
"PizzaFactory" ..> "Pizza"
"Pizzeria" ..> "Pizza" 

@enduml